namespace Animation
{
    public enum AnimationsStates
    {
        IsIdling,
        
        IsPushing,
        IsPulling,
        
        IsWalking,
        IsRunning,
        
        CrouchWalk,
        CrouchRun,
        
        IsJumping,
        
        IsFalling,
        
        IsLanding
    }
}